fix: repair html not showing hero image

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body h1 {
 }
 
 .image {
-    background-image: url("/imgs/mountain-view.png");
+    background-image: url(../imgs/mountain-view.png);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100svh;    
